--- a/usof-frontend/src/components/css-files/Login.css
+++ b/usof-frontend/src/components/css-files/Login.css
@@ -1,48 +1,45 @@
 .login{
     display: flex;
-    align-items: center;
     justify-content: center;
-    height: 100vh;
-    background: linear-gradient(
-        rgba(255, 255, 255, 0.7),
-        rgba(255, 255, 255, 0.3)
-      ),
-      url("https://images.pexels.com/photos/114979/pexels-photo-114979.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500");
-    background-size: cover;
-    background-position: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #091921;
+    background-repeat: no-repeat;
   
 
 }
 .H1Login{
-    color: rgb(77, 1, 77);
+    color: white;
     text-align: center;
+    font-family: Georgia, serif;
 }
 .appButtonLogin{
-    width: 100%;
+    width: 80%;
     height: 50px;
     padding: 10px;
     border: none;
-    background-color: rebeccapurple;
+    background-color: #d3ab1a;
     color: white;
-    border-radius: 5px;
+    border-radius: 10px;
     font-weight: bold;
     font-size: 18px;
     cursor: pointer;
     margin-top: 15px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 
 }
 
 .appButtonLogin:hover {
-    background-color: rgb(122, 88, 138);
+    background-color: #917c31;
     cursor: pointer;
 }
 form{
-    background-color: white;
-    padding: 0px 60px;
+    background-color: #1c3e50;
+    padding: 0px 70px;
     border-radius: 10px;
+    text-align: center;
 }
 .userNameP{
-    color: rgb(77, 1, 77);
+    color: white;
     padding: -20px;
 }
