--- a/client/src/components/css-files/Popup.css
+++ b/client/src/components/css-files/Popup.css
@@ -1,8 +1,8 @@
 .popup {
     z-index: 1;
     height: 100vh;
-    width: 100vh;
-    background-color: rgba(0, 0, 0, 0.1);
+    width: 100%;
+    background-color: rgba(26, 24, 24, 0.1);
     position: fixed;
     top: 0;
     left: 0;
