I was good input in window

--- a/client/src/components/css-files/Popup.css
+++ b/client/src/components/css-files/Popup.css
@@ -29,7 +29,7 @@
     background-color: white;
     transform: scale(0.5);
     transition: 0.4s all;
-    width: 50vw;
+    width: 40%;
 }
 .popup__content > input {
     border-style: solid;
