--- a/client/src/components/css-files/Calendar.css
+++ b/client/src/components/css-files/Calendar.css
@@ -24,38 +24,47 @@ body {
 
 }
 
+
 .fc .fc-button-primary {
-  background-color: blue;
+  background-color: rgba(203, 206, 58, 0.795);
+  color: black;
 }
 
 .fc .fc-button-primary:not(:disabled):active,
 .fc .fc-button-primary:not(:disabled).fc-button-active {
-  background: red;
+  background: rgba(29, 113, 168, 0.938);
 }
-
 /* редкая хуета */
 .fc{
   height: 95vh;
 }
 /* редкая хуета */
-
+.button_search{
+  background-color: #212529;
+}
 
 .selected{
   background-color:#302e99;
 }
 
 #mainId{
+  padding:15vh 0px;
   float: left;  
-  border: 1px solid #000;
-  margin: 10px;
-  top:20vh;
-  height: 20vh;
+ 
+  margin: 15px;
+  top:40vh;
+  height: 20vh; 
+  width: 30vh; 
+  /* ширина бара ебара */
   
+}
+.border1{
+  border: 1px solid;
 }
 .calendarName{
   background-color:#74992e;
   top: 30px;
-  width: 25vh;
+  width: 20vh;
   
 }
 
@@ -272,4 +281,48 @@ body {
 }
 
 /* ПОШЛИ КНОПКИ CANCEL */
+
+/* The side navigation menu */
+
+
+
+.all_list{
+  background-color: #04AA6D;
+
+}
+
+
+
+.d1 {
+ display: flex;
+  background: #A3D0C3;}
+.d1 input {
+  
+  width: 100%;
+  height: 42px;
+  padding-left: 10px;
+  border: 2px solid #7BA7AB;
+  border-radius: 5px;
+  outline: none;
+  background: #F9F0DA;
+  color: #9E9C9C;
+}
+.d1 button {
+
+  width: 42px;
+  height: 42px;
+  border: none;
+  background: #7BA7AB;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
+.d1 button:before {
+  content: "\f002";
+  font-family: FontAwesome;
+  font-size: 16px;
+  color: #F9F0DA;
+}
+/* Active/current link */
+
+
 
