--- a/client/src/components/css-files/Calendar.css
+++ b/client/src/components/css-files/Calendar.css
@@ -46,11 +46,14 @@ body {
 .selected{
   background-color:#302e99;
 }
+
 .img{
-  height: 0vh; 
- 
+  height: 0vh;
+  width: 300px;
+  margin-bottom: 10px;
   padding:0px 4vh;
 }
+
 #mainId{
   padding:25vh 0px;
   float: left;  
